# ableton-mcpv2

./: CHANGELOG.md  README.md  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py
AbletonMCP_Remote_Script/handlers/: arrangement.py  audio.py  automation.py  browser.py  clips.py  devices.py  midi.py  mixer.py  scenes.py  session.py  tracks.py
M4L_Device/: Device.amxd  Devicev2.amxd  README.md  m4l_bridge.js
M4L_Device/Beta/: Devicev2.amxd  README.md
M4L_Device/Suite/: m4l_bridge.js
MCP_Server/: __init__.py  browser_cache_seed.json  grid_notation.py  server.py
ableton_mcp_stable.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
elevenlabs_mcp/: server.py  utils.py
